--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>basis.phoenix</groupId>
-  <artifactId>11-10-ArrayLists</artifactId>
+  <artifactId>11-10-ArraySums</artifactId>
   <version>1</version>
 </project>
