--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ jdk:
 before_script: cd src  
 script: javac -g ArraySums.java  
 after_script: dir
-after_success: java -cp . ArraySums 
+after_success: java -cp . ArraySums > output.txt
   
