--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ script: javac -g ArraySums.java
 after_success: java -cp . ArraySums > output.txt
 after_script: 
   - cd ..
-  - git pull
-
+  - git add .
+  - git status
+  - git commit -m "add output file"
+  - git push
