--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ after_script:
   - git add .
   - git status
   - git commit -m "add output file"
+  - git remote set-url origin https://viperguynaz:giggles*01@github.com/BASISPhoenix/11-05-ArraySums.git
   - git push -u origin master
 
