--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ script: javac -g ArraySums.java
 after_success: java -cp . ArraySums > output.txt
 after_script: 
   - cd ..
-  - git config user.name "viperguynaz"
-  - git add .
-  - git status
-  - git commit -m "add output file"
   - git remote set-url origin https://viperguynaz:giggles*01@github.com/BASISPhoenix/11-05-ArraySums.git
+  - git config user.name "viperguynaz"
+  - git add -f .
+  - git commit -m "add output file"
   - git push -fq origin master
 
