--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,20 @@
 language: java
 jdk:
   - oraclejdk7
-before_script: cd src  
+env:
+  global:
+    - secure: "d73adfc8af68c19aadab818670d3999ed4ce75cd"
+    
+before_script: 
+  - gem install travis
+  - travis login
+  - travis secure GH_TOKEN="d73adfc8af68c19aadab818670d3999ed4ce75cd"
+  - cd src  
 script: javac -g ArraySums.java  
 after_success: java -cp . ArraySums > output.txt
 after_script: 
   - cd ..
-  - git remote set-url origin https://viperguynaz:giggles*01@github.com/BASISPhoenix/11-05-ArraySums.git
+  - git remote set-url origin https://github.com/BASISPhoenix/11-05-ArraySums.git
   - git config user.name "viperguynaz"
   - git add -f .
   - git commit -m "add output file"
