--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   global:
     - secure: "d73adfc8af68c19aadab818670d3999ed4ce75cd"
     
-install: gem install travis
+install: gem install travis --skip-completion-check
     
 before_script: 
   - travis login
