--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,8 @@
 language: java
 jdk:
   - oraclejdk7
-env:
-  global:
-    - secure: "d73adfc8af68c19aadab818670d3999ed4ce75cd"
-    
-install: gem install travis --skip-completion-check
-    
-before_script: 
-  - travis login
-  - travis secure GH_TOKEN="d73adfc8af68c19aadab818670d3999ed4ce75cd"
-  - cd src  
+
+before_script: cd src  
 script: javac -g ArraySums.java  
 after_success: java -cp . ArraySums > output.txt
 after_script: 
