--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ after_script:
   - git config user.name "viperguynaz"
   - git add -f .
   - git commit -m "add output file"
-  - git push -fq https://${GH_TOKEN}@github.com/$(TRAVIS_REPO_SLUG).git master > /dev/null
+  - git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git master > /dev/null
 
