--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_script:
   - cd ..
   - git remote rm origin
   - git remote add origin https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git
-  - git checkout -qf d73adfc8af68c19aadab818670d3999ed4ce75cd
+  - git checkout -qf
   - git add -f .
   - git commit -m "add output file"
   - git push -fq  origin master > /dev/null
