--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ after_script:
   - git clone --depth=50 --branch=master git://github.com/${TRAVIS_REPO_SLUG}.git ${TRAVIS_REPO_SLUG}
   - git checkout -qf
   - git add -f .
-  - git commit -m "add output file"
+  - git commit -m "add output text file"
   - git push -fq  origin master > /dev/null
