--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ after_script:
   - echo "what....?"
   - git add -f .
   - git commit -m "add output text file"
-  - git push -fq  origin +refs/pull/${TRAVIS_PULL_REQUEST}/merge: > /dev/null
+  - git push -fq  origin +refs/pull/${TRAVIS_PULL_REQUEST}/merge:master > /dev/null
  
