--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ before_script:
   - git config --global user.name "viperguynaz"
   - git remote rm origin
   - git remote add origin https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git
-  - git checkout master -qf
   - cd src  
 script: javac -g ArraySums.java  
 after_success: 
@@ -19,6 +18,6 @@ after_success:
 after_script: 
   - cd ..
   - echo "what....?"
-  - git add -f .
+  - git add .
   - git commit -m "add output text file"
-  - git push -fq origin +refs/pull/${TRAVIS_PULL_REQUEST}/merge:master > /dev/null
+  - git push -fq origin master > /dev/null
