--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - git config --global user.name "viperguynaz"
   - git remote rm origin
   - git remote add origin https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git
+  - git checkout master -qf
   - cd src  
 script: javac -g ArraySums.java  
 after_success: 
