--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
 before_script: 
   - git config --global user.email "viperguynaz@gmail.com"
   - git config --global user.name "viperguynaz"
+  - echo "${TRAVIS_REPO_SLUG}" 
   - git remote rm origin
   - git remote add origin https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git
   - git checkout master -qf
