--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
     secure: "d73adfc8af68c19aadab818670d3999ed4ce75cd"
     
 before_script: 
+  - echo "Git User: ${GIT_NAME}"
   - git config --global user.email "viperguynaz@gmail.com"
   - git config --global user.name "viperguynaz"
   - echo "${TRAVIS_REPO_SLUG}" 
@@ -23,4 +24,4 @@ after_script:
   - printenv
   - git add .
   - git commit -m "add output text file"
-  - git push -fq origin gh-pages > /dev/null
+  - git push -fq origin master > /dev/null
