--- a/.travis.yml
+++ b/.travis.yml
@@ -6,22 +6,14 @@ env:
     secure: "d73adfc8af68c19aadab818670d3999ed4ce75cd"
     
 before_script: 
-  - echo "${GIT_NAME}"
-  - git config --global user.email "viperguynaz@gmail.com"
-  - git config --global user.name "viperguynaz"
-  - echo "${TRAVIS_REPO_SLUG}" 
-  - git remote rm origin
-  - git remote add origin https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git
-  - git checkout master -qf
   - cd src  
 script: javac -g ArraySums.java  
 after_success: 
   - java -cp . ArraySums > solution.txt
   - diff output.txt solution.txt > diff.txt
+  - dir
 after_script: 
   - cd ..
-  - echo "what....?"
-  - printenv
   - git add .
   - git commit -m "add output text file"
   - git push -fq origin master > /dev/null
