--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,9 @@ after_script:
    - git config user.email "viperguynaz@gmail.com"
    - git config user.name "viperguynaz"
    - git init
-   - git checkout gh-pages
+   - git checkout "https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git" master:gh-pages
    - cp ../output.txt output${TRAVIS_PULL_REQUEST}.txt
    - cp ../soultion.txt solution${TRAVIS_PULL_REQUEST}.txt
    - cp ../diff.txt diff${TRAVIS_PULL_REQUEST}.txt
    - git add . 
    - git commit -m "Deploy to Github Pages"
-   - git push -fq "https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git" master:gh-pages > /dev/null 2>&1
