--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
     secure: "d73adfc8af68c19aadab818670d3999ed4ce75cd"
     
 before_script: 
-  - git checkout gh-pages
+  - git checkout master:gh-pages
   - dir 
   - cd src  
 script: javac -g ArraySums.java  
