--- a/.travis.yml
+++ b/.travis.yml
@@ -6,26 +6,29 @@ env:
     secure: "d73adfc8af68c19aadab818670d3999ed4ce75cd"
     
 before_script: 
+  - cd $HOME
+  - git clone --depth=50 --branch=gh-pages git://github.com/${TRAVIS_REPO_SLUG}.git gh-pages > /dev/null
+
   - git config --global user.email "viperguynaz@gmail.com"
   - git config --global user.name "viperguynaz"
   - echo "${TRAVIS_REPO_SLUG}" 
   - git remote rm origin
   - git remote add origin https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git
-  - mkdir pages
-  - cd pages  
+  - cd gh-pages  
   - git checkout gh-pages
   - dir 
-  - cd ../src  
+  - cd ../${TRAVIS_REPO_SLUG}/src
+  
 script: javac -g ArraySums.java  
 after_success: 
   - java -cp . ArraySums > solution.txt
   - diff output.txt solution.txt > diff.txt
   - dir
 after_script: 
-   - cd pages
-   - cp ../output.txt output${TRAVIS_PULL_REQUEST}.txt
-   - cp ../soultion.txt solution${TRAVIS_PULL_REQUEST}.txt
-   - cp ../diff.txt diff${TRAVIS_PULL_REQUEST}.txt
+   - cd $Home/gh-pages
+   - cp ../${TRAVIS_REPO_SLUG}/src/output.txt output${TRAVIS_PULL_REQUEST}.txt
+   - cp ../${TRAVIS_REPO_SLUG}/src/solution.txt solution${TRAVIS_PULL_REQUEST}.txt
+   - cp ../${TRAVIS_REPO_SLUG}/src/diff.txt diff${TRAVIS_PULL_REQUEST}.txt
    - dir
    - git add . 
    - git commit -m "Deploy to Github Pages"
