--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,12 @@ env:
 before_script: 
   - cd $HOME
   - git clone --depth=50 --branch=gh-pages git://github.com/${TRAVIS_REPO_SLUG}.git gh-pages > /dev/null
-
-  - git config --global user.email "viperguynaz@gmail.com"
-  - git config --global user.name "viperguynaz"
-  - echo "${TRAVIS_REPO_SLUG}" 
-  - git remote rm origin
-  - git remote add origin https://d73adfc8af68c19aadab818670d3999ed4ce75cd@github.com/${TRAVIS_REPO_SLUG}.git
-  - cd gh-pages  
+  - dir gh-pages
   - git checkout gh-pages
-  - dir 
-  - cd ../${TRAVIS_REPO_SLUG}/src
   
 script: javac -g ArraySums.java  
 after_success: 
+  - cd ${TRAVIS_REPO_SLUG}/src
   - java -cp . ArraySums > solution.txt
   - diff output.txt solution.txt > diff.txt
   - dir
