--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - git clone --depth=50 --branch=gh-pages git://github.com/${TRAVIS_REPO_SLUG}.git gh-pages > /dev/null
   - cd gh-pages
   - git checkout -fq gh-pages
-  - cd ${TRAVIS_REPO_SLUG}/src
+  - cd $Home/${TRAVIS_REPO_SLUG}/src
   
 script: javac -g ArraySums.java  
 after_success: 
@@ -19,9 +19,9 @@ after_success:
   - dir
 after_script: 
    - cd $Home/gh-pages
-   - cp ../${TRAVIS_REPO_SLUG}/src/output.txt output${TRAVIS_PULL_REQUEST}.txt
-   - cp ../${TRAVIS_REPO_SLUG}/src/solution.txt solution${TRAVIS_PULL_REQUEST}.txt
-   - cp ../${TRAVIS_REPO_SLUG}/src/diff.txt diff${TRAVIS_PULL_REQUEST}.txt
+   - cp ../${TRAVIS_REPO_SLUG}/src/output.txt output-${TRAVIS_PULL_REQUEST}.txt
+   - cp ../${TRAVIS_REPO_SLUG}/src/solution.txt solution-${TRAVIS_PULL_REQUEST}.txt
+   - cp ../${TRAVIS_REPO_SLUG}/src/diff.txt diff-${TRAVIS_PULL_REQUEST}.txt
    - dir
    - git add . 
    - git commit -m "Deploy to Github Pages"
