--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ before_script:
   - git clone --depth=50 --branch=gh-pages git://github.com/${TRAVIS_REPO_SLUG}.git gh-pages > /dev/null
   - cd gh-pages
   - git checkout -fq gh-pages
-  - cd $HOME/${TRAVIS_REPO_SLUG}/src
+  - cd /${TRAVIS_REPO_SLUG}
+  - dir
+  - cd src
+  - dir
   
 script: javac -g ArraySums.java  
 after_success: 
