--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,9 @@ after_success:
   - dir
   
 after_script: 
-   - git status 
+  - cd $HOME
+  - git clone --depth=50 --branch=gh-pages git://github.com/${TRAVIS_REPO_SLUG}.git gh-pages > /dev/null
+  - cd gh-pages
+  - git checkout -fq gh-pages
+  - dir
+  
