--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,10 @@ after_script:
   - git clone --depth=50 --branch=gh-pages git://github.com/${TRAVIS_REPO_SLUG}.git gh-pages > /dev/null
   - cd gh-pages
   - git checkout -fq gh-pages
-  - dir
+  - mkdir output
+  - cp $HOME/artifacts output
+  - dir output
+  - git add . 
+  - git commit -m "Deploy to Github Pages"
+  - git push -fq origin gh-pages > /dev/null
   
